--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ Flask-Login>=0.6.3
 Werkzeug>=2.3.0
 PyJWT[crypto]>=2.8.0
 
+# SMART on FHIR Client (Phase 1 Optimization)
+fhirclient>=4.3.1
+
 # Production Security Dependencies
 redis>=4.6.0
 psutil>=5.9.0
