SCOPE update to V2

--- a/cerner_sandbox.env
+++ b/cerner_sandbox.env
@@ -10,6 +10,9 @@ SMART_CLIENT_ID= edad05cb-7665-4941-8222-1854e0c3fd04
 # For deployed apps, use your actual domain
 SMART_REDIRECT_URI= https://smart-lu.uc.r.appspot.com/callback
 
+# Scopes required for the application to function correctly with Cerner's sandbox
+SMART_SCOPES='launch openid fhirUser profile user/Patient.rs user/Observation.rs user/Condition.rs user/MedicationRequest.rs user/Procedure.rs'
+
 # Flask secret key for session management
 FLASK_SECRET_KEY=your-flask-secret-key-here
 
