--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -84,9 +84,10 @@ jobs:
       uses: anchore/sbom-action@v0
       if: github.event_name != 'pull_request'
       with:
-        image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+        path: .
         format: spdx-json
         output-file: sbom.spdx.json
+      continue-on-error: true
         
     - name: Upload SBOM
       uses: actions/upload-artifact@v4
