refactor: remove PRECISE-DAPT scoring system, keep only PRECISE-HBR
- Remove precise_dapt_parameters and scoring_nomogram from cdss_config.json
- Remove calculate_precise_dapt_score() function from fhir_data_service.py
- Simplify calculate_risk_components() to use only PRECISE-HBR
- Update CI/CD workflows to remove PreciseDAPT branch references
- Update deploy.yaml and logo.svg to reflect PRECISE-HBR focus
- Keep DAPT (Dual Antiplatelet Therapy) clinical recommendations as they are treatment strategies, not scoring parameters

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI - Continuous Integration
 
 on:
   push:
-    branches: [ main, PRECISE-HBR, PreciseDAPT, develop ]
+    branches: [ main, PRECISE-HBR, develop ]
   pull_request:
-    branches: [ main, PRECISE-HBR, PreciseDAPT ]
+    branches: [ main, PRECISE-HBR ]
 
 env:
   PYTHON_VERSION: '3.11'
