--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,5 +1,5 @@
 # Google Cloud Platform 部署配置 - SMART-LU 專案
-# PRECISE-DAPT SMART on FHIR 應用程式
+# PRECISE-HBR SMART on FHIR 應用程式
 
 # 專案信息
 project_id: smart-lu
